notifications for dangling discussions were the actual cause of the error

--- a/templates/notifications/notice.html
+++ b/templates/notifications/notice.html
@@ -12,8 +12,8 @@
 
   {# the link has an onclick handler that cancels the click, runs ajax to mark the notification as read, and then on the ajax callback redirects to the target url #}
   <a
-    href="{% if notice.target %}{{notice.target.get_absolute_url}}{% else %}javascript:false;{% endif %}"
-    onclick="return mark_notifications_read({ id: {{notice.id}} }{% if notice.target %}, function() { window.location = '{{notice.target.get_absolute_url|escapejs}}'; }{% endif %})"
+    href="{% if notice.target and not notice.target.supress_link_from_notifications %}{{notice.target.get_absolute_url}}{% else %}javascript:false;{% endif %}"
+    onclick="return mark_notifications_read({ id: {{notice.id}} }{% if notice.target and not notice.target.supress_link_from_notifications %}, function() { window.location = '{{notice.target.get_absolute_url|escapejs}}'; }{% endif %})"
     >
     {{ notice.actor }} 
     {{ notice.verb }}
