initial functional tests using Selenium

--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -148,7 +148,7 @@
           </a>
           <span class="emoji-reactions">
           </span>
-          <a title="React to this comment with an emoji" class="ifnotauthor react-with-emoji" href="#" onclick="return begin_emoji_reaction(event, this);">
+          <a id="react-with-emoji" title="React to this comment with an emoji" class="ifnotauthor react-with-emoji" href="#" onclick="return begin_emoji_reaction(event, this);">
             <i class="glyphicon glyphicon-plus"></i>
             <i class="glyphicon glyphicon-heart"></i>
           </a>
