--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@ Home
 </div>
 
 <div style="float: right; margin-bottom: 1em">
-  <a href="/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Project</a>
+  <a id="new-project" href="/new-project" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> New Project</a>
 </div>
 <div class="clearfix"> </div>
 
