initial functional tests using Selenium

--- a/templates/question.html
+++ b/templates/question.html
@@ -2,7 +2,7 @@
 {% load q %}
 
 {% block title %}
-Next Question: {{q.spec.title}}
+Next Question: {{q.spec.title}} | {{task.title}}
 {% endblock %}
 
 {% block body %}
@@ -275,7 +275,7 @@ Next Question: {{q.spec.title}}
 
             {% if not is_discussion_guest %}
             {% if not task.project.is_account_project or task.can_transfer_owner %}
-            <button class="btn btn-default" onclick="$('#need-help').slideToggle();return false;">Ask team</button>
+            <button id="ask-team-show-options" class="btn btn-default" onclick="$('#need-help').slideToggle(); return false;">Ask team</button>
             {% endif %}
             {% endif %}
 
@@ -294,7 +294,7 @@ Next Question: {{q.spec.title}}
             </li>
           {% endif %}
           {% if task.can_transfer_owner %}
-            <li>
+            <li id="transfer-editorship">
               {% if write_priv %}
                 <a href="javascript:invite_to_transfer_editor()">Ask team member to finish this {% if q.spec.type == "module" %}{{module.title}}{% endif %} module</a>
               {% else %}
