--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 
         <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">My Projects</a></li>
+            <li class="active"><a href="/">System Catalog</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
@@ -93,7 +93,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user}} <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 {% if user.user_settings_task %}
-                  <li><a href="{{user.user_settings_task.get_absolute_url}}">Settings</a></li>
+                  <li><a href="{{user.user_settings_task.get_absolute_url}}">Account Settings</a></li>
                 {% endif %}
                 <li role="separator" class="divider"></li>
                 <li><a href="{% url "account_logout" %}">Log Out</a></li>
@@ -213,7 +213,7 @@
             <div id="invite-addtoteam-container" style="display: none">
               <div class="checkbox" style="margin-top: 1em">
                 <label>
-                  <input name="add-to-team" type="checkbox"> Add user to project team
+                  <input name="add-to-team" type="checkbox"> Add user to system team
                 </label>
               </div>
             </div>
