--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,7 @@ Home
 .project:hover{
   background-color: rgb(250,250,250); 
 }
+.glyphicon { color: #888; }
 
 </style>
 {% endblock %}
@@ -31,7 +32,7 @@ Home
 <div class="row">
   <div class="col-sm-push-1 col-sm-9">
     
-<h1 style="margin: 1em 0">System Catalog</h1>
+<h1 style="margin: 1em 0"><span class="glyphicon glyphicon-book"></span>&nbsp;System Catalog</h1>
 
 <div style="margin: 2em 0">
 <p>Your organization's list of web properties, major applications, and general IT systems.</p>
