Tweek glyphicon styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,9 @@
             .navbar .notification.unread a span {
                 font-weight: bold;
             }
-            .glyphicon { color: #888; }
+            .glyphicon-book { color: #888; }
+            .glyphicon-globe { color: #888; }
+            .glyphicon-plus { color: #FFF; }
         </style>
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
         <link rel="stylesheet" href="{% static "vendor/fontawesome/css/font-awesome.min.css" %}">
