--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,9 @@ Home
 .project:hover{
   background-color: rgb(250,250,250); 
 }
-.glyphicon { color: #888; }
+.glyphicon-book { color: #888; }
+.glyphicon-globe { color: #888; }
+.glyphicon-plus { color: #FFF; }
 
 </style>
 {% endblock %}
