when submitting an answer reduce page flickr by using a new keep_indicator_forever flag to ajax_loading_indicator, which is a function I wrote but in our vendor resources

--- a/templates/question.html
+++ b/templates/question.html
@@ -411,6 +411,7 @@ $(function() {
             url: window.location.pathname,
             method: "POST",
             data: form.serialize(),
+            keep_indicator_forever: true, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
             success: function(res) {
               window.location = res.redirect;
             }
