add 'snippet' templates to project modules that display on the project listing page, fixes #154

--- a/templates/home.html
+++ b/templates/home.html
@@ -64,6 +64,14 @@ Home
     {% endfor %}
   </div>
   {% endif %}
+
+  {% with snippet=project.render_snippet %}
+    {% if snippet %}
+      <div class="admins small" style="margin-top: .5em">
+        {{project.render_snippet|safe}}
+      </div>
+    {% endif %}
+  {% endwith %}
 </div>
 {% endfor %}
 
