--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load bootstrap %}
+{% load bootstrap3 %}
 
 {% block title %}
 Add System
@@ -21,10 +21,10 @@ Add System
 
 <form role="form" method="post">
     {% csrf_token %}
-    {{ form|bootstrap }}
-    <div class="form-group">
+    {% bootstrap_form form %}
+    {% buttons %}
       <button type="submit" class="btn btn-primary">Add &raquo;</button>
-    </div>
+    {% endbuttons %}
 </form>
 
   </div>
