--- a/templates/question.html
+++ b/templates/question.html
@@ -59,19 +59,19 @@ Next Question: {{q.spec.title}} | {{task.title}}
 
             {% if q.spec.type == "text" %}
               <div class="form-group">
-                <input name="value" type="text" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.get_value %}value="{{answer.get_value}}"{% endif %}>
+                <input name="value" type="text" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer %}value="{{answer}}"{% endif %}>
                 <p class="help-block">{{q.spec.help}}</p>
               </div>
 
             {% elif q.spec.type == "email-address" %}
               <div class="form-group">
-                <input name="value" type="email" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.get_value %}value="{{answer.get_value}}"{% endif %}>
+                <input name="value" type="email" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer %}value="{{answer}}"{% endif %}>
                 <p class="help-block">{% if q.spec.help %}{{q.spec.help}}{% else %}Enter an email address.{% endif %}</p>
               </div>
 
             {% elif q.spec.type == "url" %}
               <div class="form-group">
-                <input name="value" type="url" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.get_value %}value="{{answer.get_value}}"{% endif %}>
+                <input name="value" type="url" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer %}value="{{answer}}"{% endif %}>
                 <p class="help-block">{% if q.spec.help %}{{q.spec.help}}{% else %}Paste a web address.{% endif %}</p>
               </div>
 
@@ -83,7 +83,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
 
             {% elif q.spec.type == "longtext" %}
               <div class="form-group">
-                <textarea name="value" class="form-control" id="inputctrl" rows="10">{% if answer.get_value %}{{answer.get_value}}{% endif %}</textarea>
+                <textarea name="value" class="form-control" id="inputctrl" rows="10">{% if answer %}{{answer}}{% endif %}</textarea>
                 <p class="help-block">{{q.spec.help}}</p>
 
               </div>
@@ -92,7 +92,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
               {# need a shim for most browsers #}
               <div class="form-group">
                 <input name="value" type="date" class="form-control" id="inputctrl" style="width: auto"
-                   {% if answer.get_value %}value="{{answer.get_value}}"{% endif %}>
+                   {% if answer %}value="{{answer}}"{% endif %}>
                 <p class="help-block">{{q.spec.help}}</p>
               </div>
 
@@ -101,7 +101,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
               {% for choice in q.spec.choices %}
               <div class="radio">
                 <label>
-                  <input name="value" value="{{choice.key}}" type="radio" {% if answer.get_value == choice.key %}checked{% endif %}> {{choice.text}}
+                  <input name="value" value="{{choice.key}}" type="radio" {% if answer == choice.key %}checked{% endif %}> {{choice.text}}
                   <p class="help-block">{{choice.help}}</p>
                 </label>
               </div>
@@ -112,12 +112,12 @@ Next Question: {{q.spec.title}} | {{task.title}}
               <div style="margin: 1em 0 1.5em 0">
               <div class="radio">
                 <label>
-                  <input name="value" value="no"  type="radio" {% if answer.get_value == "no" %}checked{% endif %}> No
+                  <input name="value" value="no"  type="radio" {% if answer == "no" %}checked{% endif %}> No
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input name="value" value="yes" type="radio" {% if answer.get_value == "yes" %}checked{% endif %}> Yes
+                  <input name="value" value="yes" type="radio" {% if answer == "yes" %}checked{% endif %}> Yes
                 </label>
               </div>
               <p class="help-block">{{q.spec.help}}</p>
@@ -128,7 +128,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
               {% for choice in q.spec.choices %}
               <div class="checkbox">
                 <label>
-                  <input name="value" value="{{choice.key}}" type="checkbox" {% if choice.key in answer.get_value %}checked{% endif %}> {{choice.text}}
+                  <input name="value" value="{{choice.key}}" type="checkbox" {% if choice.key in answer %}checked{% endif %}> {{choice.text}}
                   <p class="help-block">{{choice.help}}</p>
                 </label>
               </div>
@@ -151,10 +151,10 @@ Next Question: {{q.spec.title}} | {{task.title}}
                 {% endcomment %}
                 {% if q.spec.min > -1000 and q.spec.max < 1000 %}
                   {# the range doesn't admit thousands, so we don't need to worry about thousands-commmas #}
-                  <input name="value" type="number" {% if q.spec.type == "integer" %}step="1"{% else %}step="any"{% endif %} class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.get_value %}value="{{answer.get_value}}"{% endif %}>
+                  <input name="value" type="number" {% if q.spec.type == "integer" %}step="1"{% else %}step="any"{% endif %} class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer %}value="{{answer}}"{% endif %}>
                 {% else %}
                   {# to let users enter thousands-commas by using a plain text field #}
-                  <input name="value" type="text" pattern="[0-9,\.]+" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer.get_value %}value="{{answer.get_value}}"{% endif %}>
+                  <input name="value" type="text" pattern="[0-9,\.]+" class="form-control" id="inputctrl" placeholder="{{q.spec.placeholder}}" {% if answer %}value="{{answer}}"{% endif %}>
                 {% endif %}
                 <p class="help-block">{{q.spec.help}}</p>
                 {% if q.spec.min|default_if_none:"NONE" != "NONE" and q.spec.max|default_if_none:"NONE" != "NONE" %}
@@ -175,7 +175,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
               <input type="radio" name="value" value="__new" checked style="display: none"/>
 
             {% elif q.spec.type == "module" %}
-              {% with current_answer=answer.answered_by_task.first %}
+              {% with current_answer=answer_obj.answered_by_task.first %}
 
               {% for m in answer_tasks %}
                 <div class="radio">
@@ -220,7 +220,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
 
             {% endif %}
 
-            {% if answer.answered_by_reference %}
+            {% if answer_obj.answered_by_reference %}
             <p class="text-info">
               This question cannot be changed because it is linked to another question.
             </p>
@@ -251,7 +251,7 @@ Next Question: {{q.spec.title}} | {{task.title}}
               &raquo;
             </button>
 
-            {% if answer %}
+            {% if answer_obj %}
               <button id="clear-button"
                 type="submit" class="btn btn-danger"
                 onclick="$('#question > form input[name=method]').val('clear')">
