--- a/templates/base.html
+++ b/templates/base.html
@@ -150,12 +150,22 @@
     </nav>
 
     <div class="container" style="margin-top: 1em;">
-            {# The login page is accessible to unauthenticated users. We should only leak the org's name to authenticated users. #}
-            {% if request.organization %}
-              <span class="glyphicon glyphicon-globe"></span>&nbsp;<a href="/" style="color:black; font-size:1.1em; font-weight:bold;">{{request.organization.name}}</a>
-            {% else %}
-              {{request.get_host}}
-            {% endif %}
+      {# The login page is accessible to unauthenticated users, in which case request.organization is not set. #}
+      {% if request.organization  %}
+        {% with logo=request.organization.get_logo %}
+          {% if logo %}
+            <img src="{{logo.url}}" height="22" alt="Organization Logo"
+                      style="margin-top: -4px; margin-right: .5em;">
+          {% else %}
+          <span class="glyphicon glyphicon-globe"></span>
+          {% endif %}
+        {% endwith %}
+        <a href="/" style="color: black; font-size: 1.1em; font-weight: bold;">
+          {{request.organization.name}}
+        </a>
+      {% else %}
+        {{request.get_host}}
+      {% endif %}
     </div>
 
     {% if messages %}
